--- a/asset/bootstrap/css/style.css
+++ b/asset/bootstrap/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     background:#1f2223;
-    /* overflow: hidden; */
+    
 }
 /* css for navbar starts */
 .navigation-header {
@@ -18,7 +18,6 @@
   
   nav {
     width: 100%;
-    /* max-width: 1200px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -111,6 +110,7 @@
     flex-direction: row;
     gap: 0;
     margin: 0 auto;
+    overflow-x: hidden;
 
 
 
@@ -394,6 +394,7 @@
     /* background: red; */
     /* height: 100vh; */
     width:100%;
+    overflow-x: hidden;
 }
 
 
@@ -521,8 +522,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     /* margin: 10px; */
-    padding: 0 2rem;
+    padding: 0 0.8rem;
     padding-top: 2rem;
+    overflow-x: hidden;
 }
 .margin_right{
    margin-left:  45%;
@@ -553,7 +555,7 @@
     box-shadow: 0 0 15px #01fa04;
 }
 .gallery-item {
-    flex-basis: calc(33.33% - 10px);
+    flex-basis: calc(32.33% - 10px);
     margin-bottom: 10px;
    
    
