--- a/asset/bootstrap/css/style.css
+++ b/asset/bootstrap/css/style.css
@@ -229,19 +229,11 @@
     left: 50%;
     /* background:blue; */
     transform: translate(-50%,-50%); 
-    animation: rotate 25s linear infinite;
 
 }
 
 
-@keyframes rotate{
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
-}
+
  .ft{
     height: 90%;
     width: 70%;
@@ -260,7 +252,7 @@
 @media (max-width: 768px) {
     .hero{
         flex-direction:column;
-        height: 100vh;
+        height: 120vh;
 
         
     }
@@ -277,6 +269,7 @@
         height: 40%;
         width: 100%;
         margin-right: 0;
+        margin-top: 0.5rem;
     }
     
     .w{
@@ -297,7 +290,7 @@
     }
     .hero{
         
-        height: 120vh;
+        height:140vh;
 
         
     }
@@ -524,7 +517,7 @@
     /* margin: 10px; */
     padding: 0 0.8rem;
     padding-top: 2rem;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .margin_right{
    margin-left:  40%;
@@ -557,6 +550,7 @@
 .gallery-item {
     flex-basis: calc(32.33% - 10px);
     margin-bottom: 10px;
+    
    
    
     
